--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,5 +27,11 @@
         <item name="android:textSize">@dimen/dimen_12sp</item>
         <item name="android:textColor">@color/subTitleColor</item>
     </style>
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+
+        <item name="android:background">@color/black</item>
+    </style>
 
 </resources>
